src-errormsg/E26-AmbiguousType/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E26-AmbiguousType/Plutarch.hs:23:14: error: [GHC-18872]
    • Couldn't match type ‘PAsData a0’ with ‘PInteger’
        arising from a use of ‘plam’
    • In the first argument of ‘($)’, namely ‘plam’
      In the expression: plam $ \ d -> pdata (pfromData d)
      In an equation for ‘proundtrip’:
          proundtrip = plam $ \ d -> pdata (pfromData d)
   |
23 | proundtrip = plam $ \d -> pdata (pfromData d)
   |              ^^^^

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E26-AmbiguousType/Plutarch.hs:23:44: error: [GHC-83865]
    • Couldn't match type ‘PData’ with ‘PAsData a0’
      Expected: Term s (PAsData a0)
        Actual: Term s PData
    • In the first argument of ‘pfromData’, namely ‘d’
      In the first argument of ‘pdata’, namely ‘(pfromData d)’
      In the expression: pdata (pfromData d)
   |
23 | proundtrip = plam $ \d -> pdata (pfromData d)
   |                                            ^
